<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="modo_escuro">Modo escuro</string>
    <string name="toolbar_menu">Toolbar menu</string>
    <string name="toolbar_dark_mode">Toolbar Dark Mode</string>
    <string name="minhas_listas">Minhas Listas</string>
    <string name="add_new_list_button">Add new list button</string>
    <string name="more_options_icon">More options icon</string>
    <string name="back_button">Back button</string>
    <string name="menu">Menu</string>
    <string name="cone_de_avalie_nos">Ícone de avalie-nos</string>
    <string name="chevron_forward">Chevron forward</string>
    <string name="avalie_nos">Avalie-nos</string>
    <string name="anotacao">Anotações</string>
    <string name="sair_do_aplicativo">Sair do aplicativo</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="duplicar">Duplicar</string>
    <string name="more_options_button">More options button</string>
    <string name="nome_do_item">Nome do item</string>
    <string name="quantidade">Quantidade</string>
    <string name="pre_o">Preço</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="item_comprado">Item comprado</string>
    <string name="decrementar_quantidade_de_itens">Decrementar quantidade de itens</string>
    <string name="incrementar_quantidade_de_itens">Incrementar quantidade de itens</string>
</resources>