<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_item"
        app:counterEnabled="true"
        app:counterMaxLength="22"
        app:counterTextColor="@color/gray"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/gray"
        app:boxStrokeErrorColor="@color/red"
        app:errorTextColor="@color/red"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="22"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/decrease_quantity"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/increase_quantity"
        android:contentDescription="@string/decrementar_quantidade_de_itens"
        app:icon="@drawable/ic_remove_light"
        app:iconTint="@android:color/white"
        android:backgroundTint="@color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/increase_quantity"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name_layout"
        app:layout_constraintStart_toEndOf="@id/decrease_quantity"
        android:contentDescription="@string/incrementar_quantidade_de_itens"
        app:icon="@drawable/ic_add"
        app:iconTint="@android:color/white"
        android:backgroundTint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_quantity_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name_layout"
        app:layout_constraintStart_toEndOf="@id/increase_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:hint="@string/quantidade"
        app:counterTextColor="@color/gray"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/gray"
        app:boxStrokeErrorColor="@color/red"
        app:errorTextColor="@color/red"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="1"
            android:text="1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_quantity_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/pre_o"
        app:prefixText="R$"
        app:prefixTextColor="@color/black"
        app:counterTextColor="@color/gray"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/gray"
        app:boxStrokeErrorColor="@color/red"
        app:errorTextColor="@color/red"
        android:layout_marginTop="18dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="1"
            android:text="100,00"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/already_bought_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_price_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        app:buttonTint="@color/black"
        app:checkMarkTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/item_comprado"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        app:layout_constraintTop_toBottomOf="@id/already_bought_checkbox"
        app:layout_constraintEnd_toStartOf="@id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        app:layout_constraintTop_toBottomOf="@id/already_bought_checkbox"
        app:layout_constraintStart_toEndOf="@id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
