<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/menu_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Toolbar
                android:id="@+id/menu_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"/>

            <ImageView
                android:id="@+id/toolbar_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintTop_toTopOf="@id/menu_toolbar"
                app:layout_constraintBottom_toBottomOf="@id/menu_toolbar"
                app:layout_constraintStart_toStartOf="@id/menu_toolbar"
                android:layout_marginStart="18dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@id/menu_appbar"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp">

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/inner_menu_layout"
            app:layout_constraintStart_toStartOf="@id/inner_menu_layout"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/menu_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/cone_de_avalie_nos"
            android:src="@drawable/ic_star"
            />

        <TextView
            android:id="@+id/menu_star_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/inner_menu_layout"
            app:layout_constraintStart_toEndOf="@id/menu_star"
            android:layout_marginTop="55dp"
            android:layout_marginStart="10dp"
            android:text="@string/avalie_nos"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            />

        <ImageView
            android:id="@+id/menu_star_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/inner_menu_layout"
            app:layout_constraintEnd_toEndOf="@id/inner_menu_layout"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/chevron_forward"
            android:src="@drawable/ic_chevron_forward"
            />

        <ImageView
            android:id="@+id/menu_anotacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/menu_star"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/cone_de_avalie_nos"
            android:src="@drawable/ic_book"
            />

        <TextView
            android:id="@+id/menu_anotacao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/menu_star"
            app:layout_constraintStart_toEndOf="@id/menu_star"
            android:layout_marginTop="55dp"
            android:layout_marginStart="10dp"
            android:text="@string/anotacao"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            />

        <ImageView
            android:id="@+id/menu_anotacao_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/menu_star"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/chevron_forward"
            android:src="@drawable/ic_chevron_forward"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair_do_aplicativo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>