<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/lists_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Toolbar
                android:id="@+id/list_items_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"/>

            <ImageView
                android:id="@+id/toolbar_menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/toolbar_menu"
                android:src="@drawable/ic_menu"
                app:layout_constraintTop_toTopOf="@id/list_items_toolbar"
                app:layout_constraintBottom_toBottomOf="@id/list_items_toolbar"
                app:layout_constraintStart_toStartOf="@id/list_items_toolbar"
                android:layout_marginStart="18dp"
                />

            <ImageView
                android:id="@+id/toolbar_dark_mode_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/toolbar_dark_mode"
                android:src="@drawable/ic_dark_mode"
                app:layout_constraintEnd_toEndOf="@id/list_items_toolbar"
                app:layout_constraintTop_toTopOf="@id/list_items_toolbar"
                app:layout_constraintBottom_toBottomOf="@id/list_items_toolbar"
                android:layout_marginEnd="18dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lists_appbar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/minhas_listas"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lists_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/list"
        tools:itemCount="12"
        />
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_new_list_button"
        android:backgroundTint="@color/black"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        app:useCompatPadding="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>