<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListItemsActivity"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/list_items_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Toolbar
                android:id="@+id/list_items_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"/>

            <ImageView
                android:id="@+id/toolbar_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintTop_toTopOf="@id/list_items_toolbar"
                app:layout_constraintBottom_toBottomOf="@id/list_items_toolbar"
                app:layout_constraintStart_toStartOf="@id/list_items_toolbar"
                android:layout_marginStart="18dp"
                />

            <ImageView
                android:id="@+id/toolbar_more_options_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/more_options_button"
                android:src="@drawable/ic_more_vert"
                app:layout_constraintEnd_toEndOf="@id/list_items_toolbar"
                app:layout_constraintTop_toTopOf="@id/list_items_toolbar"
                app:layout_constraintBottom_toBottomOf="@id/list_items_toolbar"
                android:layout_marginEnd="18dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/list_items_appbar"
        android:hint="Pesquisar..."
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_items_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/list_item"
        tools:itemCount="12"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_list_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_new_list_button"
        android:backgroundTint="@color/black"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        app:useCompatPadding="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>